<resources>
    <string name="app_name">RTA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="progress_title">Please wait</string>
    <string name="progress_detail">Downloading assets...</string>
    <string name="transition_name_title" translatable="false">title</string>
    <string name="transition_name_cover" translatable="false">cover</string>
    <string name="transition_name_time" translatable="false">time</string>
    <string name="transition_name_duration" translatable="false">duration</string>
    <string name="transition_name_progress" translatable="false">progress</string>
    <string name="transition_name_fab" translatable="false">fab</string>
    <string name="play_vector_path" translatable="false">M6,5 l12,7 l0,0 l-12,0z M6,12 l12,0 l0,0 l-12,7z</string>
    <string name="pause_vector_path" translatable="false">M5,6 l14,0 l0,4 l-14,0z M5,14 l14,0 l0,4 l-14,0z</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interactive_animation">Interactive animation</string>
    <string name="auto_visibility">Auto visibility</string>
    <string-array name="animation_type">
        <item>None</item>
        <item>Color</item>
        <item>Scale</item>
        <item>Worm</item>
        <item>Slide</item>
        <item>Fill</item>
        <item>Thin Worm</item>
        <item>Drop</item>
        <item>Swap</item>
    </string-array>
    <string-array name="orientation">
        <item>Horizontal</item>
        <item>Vertical</item>
    </string-array>
    <string name="customize">Customize</string>
    <string name="home">Home</string>
    <string name="right_to_left_mode">Right to left mode</string>
    <string name="OfferstxtTitle">Spring Sale Upto 50% Off @ Dubai Mall</string>
    <string name="OfferstxtDesc">Stop by and shop our spring sale an take upto 50% off select styles</string>
    <string name="DearCustomer">Dear Customer,before contacting us please click here to finda list of frequently asked question</string>
    <string name="WeAlways">We always look forward to serve you and always ready to answer all your inquiries</string>
    <string name="Phoneno">+971 (0)2 681 7493</string>
    <string name="PObox">P.O. Box 47388, Abu Dhabi, U.A.E.</string>
    <string name="Email">  support@mlt-uae.ae</string>
    <string name="Location">Location</string>
    <string name="Fax">Fax</string>
    <string name="fax">+971 (0)2 681 7499</string>
    <string name="mainstation">Al Reem Island </string>
    <string name="Area">Office # 5311 and 5312, Addax Tower, Al-Reem Island</string>
    <string name="Coordinates">24.4989° N 54.4031° E</string>
    <string name="Googlemaplink"><u>Click here</u></string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="mobileno">Mobile No*</string>
    <string name="issueoccured">Issue Type</string>
    <string name="message">Message*</string>
    <string name="google_maps_key">	AIzaSyB0ZCLT-QKhe5S4gdIP5h9MAE9x6w33WuY</string>
    <string name="loading">Loading...</string>
    <string name="file_not_found">File not found</string>
    <string name="viewmore"><u>View More</u></string>
    <string name="hidekeyboard">Hide Keyboard</string>
    <string name="deststart">Destination Start : </string>
    <string name="destend">Destination End : </string>
    <string name="deststartaddress">Destination Start Address:   </string>
    <string name="destendaddress">Destination End Address:   </string>
    <string name="duration">Trip Duration : </string>
    <string name="Country">Country : </string>
    <string name="fare">Fare : </string>
    <string name="startfare">Start Fare : </string>
    <string name="startdatetime">Start Date and Time : </string>
    <string name="enddatetime">End Date and Time : </string>
    <string name="City">City : </string>
    <string name="Abbreviations">Abbreviations :  </string>
    <string name="Capital">Capital : </string>
    <string name="TimeZone">Time Zone : </string>
    <string name="DialCode">Dial Code : </string>
    <string name="CurrentTime">Current Time : </string>
    <string name="CurrentDate">Current Date : </string>
    <string-array name="issues_array">
        <item>Driver Details</item>
        <item>Trip Details</item>
        <item>About us</item>
        <item>Happy Meter</item>
        <item>RTA services</item>
        <item>DTC services</item>
        <item>Other government Services</item>
        <item>Utilities and other services</item>
        <item>E-Commerce online shop</item>
        <item>Classified Advertisement</item>
        <item>Offers</item>
        <item>Banners</item>
        <item>About Us</item>
        <item>News</item>
        <item>Maps</item>
        <item>Weather</item>
        <item>Entertainment</item>
    </string-array>
    <string-array name="rtl">
        <item>On</item>
        <item>Off</item>
        <item>Auto</item>
    </string-array>
    <string-array name="items">
        <item>Devices</item>
        <item>Request</item>
        <item>Notifications</item>
        <item>Account</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="date">Date goes here!</string>
    <string name="title">Title goes here!</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="mlt">Multi Level Technology</string>
    <string name="modelno">Model xCL_E200CP</string>
    <string name="fccid">FCC ID:MQT-E200CP</string>
    <string name="pci">PCI 5.0:4-40217</string>
    <string name="europe">Europe</string>
    <string name="traid">TRA ID DA65900/17</string>
    <string name="ta">TA ER60424/18</string>
    <string name="weee">WEEE Verified</string>
    <string name="rohs">RoHS Compliance</string>
    <string name="svhc">SVHC Tested</string>
    <string name="mltaboutus1"><b>Multi Level Technology “MLT”</b> is a subsidiary of <b>Al Sayegh Group</b> specialized in &amp; providing Payment Solutions. <b>MLT</b> is based in UAE, and it provides its customers withend-to-end payment solutions, spanning from acquiring, payment processing to process automation and back-end services such as automated segregation, reconciliation, posting, ERP integration and more customized.</string>
    <string name="mltaboutus2">Our solutions can be tailored for any sized business and can either be created from the ground up, or be integrated seamlessly with existing infrastructure. Additionally,<b>MLT</b>can provide its customers with turnkey integrated solution.</string>
    <string name="mltaboutus3"><b>MLT</b> with coordination of <b>Network Intelligent Payment Solution “NIPS”</b>, a sister company of <b>MLT</b>, provides tailor-made developed platforms to execute services and facilitate payment for all types of payment channels and their associated support infrastructure.</string>
    <string name="happyscreenthankyoutext">Thank you for helping make Dubai the happiest city on earth</string>
    <string name="happyscreenfindoutmore">FIND OUT MORE ON</string>
    <string name="happyscreenurl"><u>happinessagenda.ae</u></string>
    <string name="Home">Home</string>
    <string name="Info">Info</string>
    <string name="Back">Back</string>
    <string name="BackEnglish">Back</string>
    <string name="Ok">Ok</string>
    <string name="RTAService">RTA Services</string>
    <string name="CompletePayment">Complete Payment</string>
    <string name="CardPayment">Card Payment</string>
    <string name="RTACertificates">Certificates</string>
    <string name="Selectanyoneoption">Select any one option</string>
    <string name="FineInquiryandPayments">Fine Inquiry and Payments</string>
    <string name="VehicleRegistrationServices">RTA Vehicle Services</string>
    <string name="VehicleRegistrationRenewal">Vehicle Registration Renewal</string>
    <string name="VehicleRegistrationLossDamage">Vehicle Registration Card Loss/Damage</string>
    <string name="DrivingLicenseServices">RTA Driving Services</string>
    <string name="DrivingLicenseRenewal">Driving License Renewal</string>
    <string name="DrivingLicenseLossDamage">Driving License Loss/Damaged</string>
    <string name="ParkingServices">RTA Parking Services</string>
    <string name="parkingServices">Parking Services</string>
    <string name="PrintingCertificate">Printing Certificate</string>
    <string name="Newseasonalcard">New Seasonal Card</string>
    <string name="Seasonalcardrennewal">Seasonal Card Renewal</string>
    <string name="seasonalparkingcard">Seasonal Parking Card</string>
    <string name="seasonalparkingcardrenewal">Seasonal Parking Card Renewal</string>
    <string name="ApplicantName">Applicant Name</string>
    <string name="EnterCardNumber">Enter Card Number</string>
    <string name="PleaseEnteryourCVV">Please Enter your CVV</string>
    <string name="CardType">Card Type</string>
    <string name="CardPeriod">Card Period</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="ActivationDate">Activation Date</string>
    <string name="FineInquiryandPayment">Fine Inquiry and Payment</string>
    <string name="TrafficFileNumber">Traffic File Number</string>
    <string name="DrivingLicense">Driving License</string>
    <string name="PlateNumber">Plate Number</string>
    <string name="FineNumber">Fine Number</string>
    <string name="FinesByTrafficFileNo">Fines By Traffic File Number</string>
    <string name="FinesByPlateNo">Fines By Plate Number</string>
    <string name="FinesByDrivingLicense">Fines By Driving License</string>
    <string name="FinesByFineNumber">Fines By Fine Number</string>
    <string name="LicenseNo">License Number</string>
    <string name="LicenseSource">License Source</string>
    <string name="Placeofissue">Place of Issue</string>
    <string name="BirthYear">Birth Year</string>
    <string name="TicketYear">Ticket Year</string>
    <string name="Plateno">Plate Number</string>
    <string name="Platecode">Plate Code</string>
    <string name="Platecategory">Plate Category</string>
    <string name="ReplacementReason">Replacement Reason</string>
    <string name="Platetype">Plate Type</string>
    <string name="Fineno">Fine Number</string>
    <string name="BeneficiaryCode">Beneficiary Code</string>
    <string name="Search">Search</string>
    <string name="Continue">Continue</string>
    <string name="Submit">Submit</string>
    <string name="AddVehicle">Add Vehicle</string>
    <string name="TicketNumber">TicketNumber</string>
    <string name="DrivingLicenseInformation">Driving License Information</string>
    <string name="FineInformation">Fine Information</string>
    <string name="Date">Date</string>
    <string name="FineAmount">FineAmount</string>
    <string name="Penalty">Penalty</string>
    <string name="KnowledgeFee">Knowledge Fee</string>
    <string name="Expirydate">Expiry Date</string>
    <string name="Total">Total</string>
    <string name="Details">Details</string>
    <string name="UnPayableTickets">Unpayable Tickets</string>
    <string name="FineCount">FineCount:</string>
    <string name="BlackPointsCount">Black Points Count:\u0020</string>
    <string name="EnteryourEmailAddress">Enter your Email Address</string>
    <string name="EnteryourAddress">Enter your Address </string>
    <string name="EnteryourMobileNumber">Enter your Mobile Number</string>
    <string name="getcustomerdetailstext">Please enter a valid email address and phone number</string>
    <string name="YourPaymentisbeingprocessed">Your Payment is under process</string>
    <string name="Sorryfortheinconvinience">Sorry for the inconvinience the server is temporary unavailable</string>
</resources>