<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_mlt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/mltaboutus1"
                android:textColor="@color/colorblack"
                android:textSize="15sp" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_mlt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/mltaboutus2"
                android:textColor="@color/colorblack"
                android:textSize="15sp" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_mlt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/mltaboutus3"
                android:textColor="@color/colorblack"
                android:textSize="15sp" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
