<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_mlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/mlt"
                android:textColor="@color/colorblack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:src="@drawable/mltlogo"
                android:text="Contact Us"
                android:textColor="@color/colorblack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/trabackground"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/traid"
                    android:textColor="@color/colorblack"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/ta"
                    android:textColor="@color/colorblack"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/modelno"
                android:textColor="@color/colorblack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tv_fcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/fccid"
                android:textColor="@color/colorblack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_pci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/pci"
                android:textColor="@color/colorblack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:src="@drawable/logotrash"
                        android:textColor="@color/colorblack"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@color/colorblack"></View>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="●"
                            android:textColor="@color/colorblack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/weee"
                            android:textColor="@color/colorblack"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="●"
                            android:textColor="@color/colorblack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/rohs"
                            android:textColor="@color/colorblack"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="●"
                            android:textColor="@color/colorblack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/svhc"
                            android:textColor="@color/colorblack"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <ImageView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/logofc"
                android:text="Contact Us"
                android:textColor="@color/colorblack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/europe"
                android:textColor="@color/colorblack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/logotuv"
                    android:text="Contact Us"
                    android:textColor="@color/colorblack"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/logoce"
                    android:text="Contact Us"
                    android:textColor="@color/colorblack"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_error_outline_black_48dp"
                    android:text="Contact Us"
                    android:textColor="@color/colorblack"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
